cleans up and comments